applications/registry/deployment-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry
  name: registry
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - image: registry:2
        imagePullPolicy: Always
        name: registry
        volumeMounts:
          - name: registry-storage
            mountPath: /var/lib/registry
          - name: certs
            mountPath: /certs
            readOnly: true
          - name: auth
            mountPath: /auth
            readOnly: true
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: pvc-registry
      - name: certs
        secret:
          secretName: registry-tls
      - name: auth
        secret:
          secretName: registry-auth
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
