applications/registry/statefulset-registry.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  serviceName: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - image: registry:2
        imagePullPolicy: Always
        name: registry
        volumeMounts:
          - name: registry-storage
            mountPath: /var/lib/registry
          - name: certs
            mountPath: /certs
            readOnly: true
          - name: auth
            mountPath: /auth
            readOnly: true
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: certs
        secret:
          secretName: registry-tls
      - name: auth
        secret:
          secretName: registry-auth
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: registry-storage
    spec:
      storageClassName: local-path
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
