applications/registry/service-registry.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
  name: registry
spec:
  ports:
  - name: registry
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: registry
  sessionAffinity: None
  type: ClusterIP
